<resources>
    <string name="app_name">CorSanum</string>
    <string name="preference_file_key">lu.uni.psod.corsanum.PREFERENCE_FILE_KEY</string>
    <string name="saved_exercise_list">saved_exercise_list_json</string>
    <string name="current_exercise_idx">current_exercise</string>
    <string name="exc_detail_tran_name">exercise_title_act_transition_name</string>

    <!-- Displayed strings -->
    <string name="start_exercise_label">Start Exercise</string>
    <string name="resume_exercise_label">Resume Exercise</string>
    <string name="pause_exercise_label">Pause Exercise</string>
    <string name="stop_exercise_label">Stop Exercise</string>
    <string name="finish_map_label">Finish</string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="step_count">Steps:</string>
    <string name="save_action">Save!</string>
    <string name="add_action">Add</string>
    <string name="minutes_label">min</string>
    <string name="seconds_label">s</string>
    <string name="new_exercise_name_hint">Enter exercise name...</string>
    <string name="create_new_exercise_label">Create</string>
    <string name="cancel_create_new_exercise_label">Cancel</string>
    <string name="app_name_string">Cor Sanum</string>
    <string name="create_new_exercise_intent">createNewExerciseIntent</string>
    <string name="create_shared_label">Return to factory settings</string>
    <string name="my_exercises_label">My exercises</string>
    <string name="free_route_label">Free route</string>
    <string name="speed_front_label">Speed:</string>
    <string name="speed_back_label">km/h</string>
    <string name="stretch_label_front">Stretch!</string>
    <string name="exercise_done">Done!</string>
    <string name="go_to_next_point">Go to next waypoint!</string>
</resources>
