<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/exercise_title"
        android:textSize="24sp"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_weight="1"
     />

    <TextView
        android:id="@+id/step_count"
        android:textSize="24sp"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_weight="1"
        />


    <TextView
        android:id="@+id/speed"
        android:textSize="24sp"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_weight="1" />

    <ToggleButton
        android:id="@+id/start_pause_exercise"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_weight="1"
        android:textOn="@string/pause_exercise_label"
        android:textOff="@string/start_exercise_label" />

    <Button
        android:id="@+id/stop_exercise"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_weight="1"
        android:visibility="invisible"
        android:text="@string/stop_exercise_label" />


</LinearLayout>