<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="lu.uni.psod.corsanum.fragments.EditActionFragment">


    <TextView
        android:id="@+id/exercise_edit_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_weight="1"
        android:textSize="24sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:padding="5dp">

        <Spinner
            android:id="@+id/exercise_edit_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:layout_weight="13" />

        <LinearLayout
            android:id="@+id/duration_picker_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="14"
            android:orientation="horizontal">

            <NumberPicker
                android:id="@+id/exercise_min_stretch_picker"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="5"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="2"
                android:gravity="right|center"
                android:text="@string/minutes_label"/>

            <NumberPicker
                android:id="@+id/exercise_sec_stretch_picker"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="5"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:gravity="center"
                android:layout_weight="2"
                android:text="@string/seconds_label"/>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/exercise_add_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:text="@string/add_action"
            android:textSize="25dp"
            android:paddingLeft="30dp"
            android:drawableLeft="@android:drawable/ic_input_add"
            android:layout_margin="10dp"
            />

        <Button
            android:id="@+id/exercise_save_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:textSize="25dp"
            android:paddingRight="30dp"
            android:layout_margin="10dp"
            android:text="@string/save_action"
            android:drawableLeft="@android:drawable/ic_lock_idle_lock"
            />

    </LinearLayout>

</LinearLayout>
